tests/parser/invalid/err_while_missing_block.c
int main() {
  while (1) x = 1;
}
